osd: Move object error check out of be_select_auth_object()

Fixes: http://tracker.ceph.com/issues/25108

Signed-off-by: David Zafman <dzafman@redhat.com>
(cherry picked from commit c789fd1899f697a994a28e45a6f9262c6721d77d)

Conflicts:
	src/osd/PGBackend.cc

- mimic still has auth_prio